Update limechat theme.

--- a/limechat/kud.css
+++ b/limechat/kud.css
@@ -17,12 +17,9 @@
 */
 
 html {
-  /*font-family: 'Menlo';*/
   font-family: 'Ubuntu Mono';
-  /*font-size: 12px;*/
   font-size: 14px;
   line-height: 20px;
-  /*background-color: #1a2230;*/
   background-color: #26292C;
   color: white;
   word-wrap: break-word;
@@ -69,9 +66,6 @@ a[imageindex] {
     left: 0;
     border: 1px solid #222;
     border-radius: 0px;
-/*    box-shadow: inset rgba(255,255,255, .7) 0 0 2px,
-          inset rgba(255,255,255, .2) 0 0 10px;
-    background: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.06) 50%, rgba(255, 255, 255, 0) 50.5%);*/
     box-shadow: none;
     background: none;
   }
@@ -83,8 +77,6 @@ a[imageindex] {
     padding: 0;
     border: 0;
     border-radius: 0px;
-    /*, border, & 2 x inner glow*/
-    /*box-shadow: 1px 1px 2px rgba(0,0,0, .6);*/
     box-shadow: none;
   }
 
@@ -103,7 +95,7 @@ a[imageindex] {
   content: "";
 }
 .line[highlight=true] {
-  background-color: #212426;
+  background-color: #1d1f21;
 }
 
 .url { word-break: break-all; }
@@ -113,10 +105,7 @@ a[imageindex] {
 .place { color: #d28f59; }
 
 /* nickname for text messages */
-/*.sender[type=myself] { color: #8b84d0; }*/
 .sender[type=myself] { color: #72AACA; }
-/*.sender[type=normal] { color: #88c26b; }*/
-/*.sender[type=normal] { color: #B6D877; }*/
 .sender[type=normal] { color: #69E14B; }
 .sender[type=normal][colornumber='0'] {}
 .sender[type=normal][colornumber='1'] {}
@@ -142,7 +131,6 @@ a[imageindex] {
 .message[type=error_reply] { color: #c2339a; }
 .message[type=dcc_send_send] { color: #c2339a; }
 .message[type=dcc_send_receive] { color: #c2339a; }
-/*.message[type=privmsg] { color: #85abb5; }*/
 .message[type=privmsg] { color: white; }
 .message[type=notice] { color: #daefa3; }
 .message[type=action] { color: #88c26b; }
