--- a/discord/kud.css
+++ b/discord/kud.css
@@ -12,6 +12,10 @@ code {
   color: rgba(0, 0, 0, 0.7);
 }
 
+.theme-light .textArea-2Spzkt {
+  color: rgba(0, 0, 0, 0.7);
+}
+
 .markup-2BOw-j {
   line-height: 1.4;
 }
